Closed Bug 945640 Opened 11 years ago Closed 11 years ago

[bluedroid HFP] Volume UI doesn't pop up when bluetooth headset adjusts volume during call

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
1.3 Sprint 6 - 12/6

People

(Reporter: ben.tian, Assigned: ben.tian)

Details

Attachments

(1 file, 1 obsolete file)

Volume UI doesn't pop up when bluetooth headset adjusts volume during call. The reason is that Bluedroid HFP manager fails to notify gaia as the notification code doesn't run on main thread.
Assignee: nobody → btian
Attachment #8341609 - Flags: review?(echou)
Comment on attachment 8341609 [details] [diff] [review]
Patch 1 (v1): Notfiy SCO volume change on main thread

Review of attachment 8341609 [details] [diff] [review]:
-----------------------------------------------------------------

r=me with nit addressed. Thanks.

::: dom/bluetooth/bluedroid/BluetoothHfpManager.cpp
@@ +279,5 @@
>          break;
> +      case MainThreadTaskCmd::NOTIFY_SCO_VOLUME_CHANGED:
> +        {
> +          nsCOMPtr<nsIObserverService> os =
> +            mozilla::services::GetObserverService();

Please check if os has value. (so please assist with revising bluez/BluetoothHfpManager.cpp as well)
Attachment #8341609 - Flags: review?(echou) → review+
Changes:
- ensure variable 'os' in comment 2 not nullptr for both bluez and bluedroid.
- replace NS_ASSERTION with if-statement in bluez/BluetoothHfpManager.cpp
Attachment #8341609 - Attachment is obsolete: true
Keywords: checkin-needed
No longer depends on: 945193
https://hg.mozilla.org/mozilla-central/rev/98b5726efb4a
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 1.3 Sprint 6 - 12/6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: