Bug 945640 - [HFP] Pop up volume UI when bluetooth headset adjusts volume during call, r=echou